Fix info wrapping issue (#1471)

--- a/src/components/SpectralProfiler/SpectralProfilerInfoComponent/SpectralProfilerInfoComponent.scss
+++ b/src/components/SpectralProfiler/SpectralProfilerInfoComponent/SpectralProfilerInfoComponent.scss
@@ -8,7 +8,11 @@
     }
 
     .profile-legend {
-        display: inline-flex;
-        flex-wrap: nowrap;
+        display: block;
+
+        .profile-info {
+            display: inline-flex;
+            flex-wrap: nowrap;
+        }
     }
 }
